--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,39 @@
 .navbar-nav { 
-    float: right;
-     
+    float: right; 
 }
 .nav-item{
     margin-right: 40px;
 }
 .glyphicon{
     margin: 5px;
+}
+.container-fluid{
+    width: 100%;
+}
+.row_style{
+    margin-top: 20px;
+  }
+.order_button{
+    padding-left: 12px ;
+    width: 100%;
+    border-radius: 8px;
+    background-color: rgb(83, 126, 245);
+    color:white;
+    font-size: 15px;
+  }
+.footer{
+      overflow: hidden;
+      width: 100%;
+      background-color: rgb(58, 55, 55);
+      color: white;
+  }
+.footer_col{
+    padding-left: 40px;
+    margin-bottom: 10px;
+}
+.footer a{
+    text-decoration: none;
+    margin-top: 5px;
+    display: block;
+    color: white;
 }
