--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -88,3 +88,18 @@
 .company_info p{
     color: rgba(0, 0, 0, 0.685);
 }
+/* --------------------- SIGN_UP_CSS --------------------- */ 
+.signup_col input{
+    width: 100%;
+    display: block;
+    margin: 30px 0px;
+    font-size: 20px;
+}
+.signup_submit{
+    float: right;
+    padding: 10px 25px;
+    border-radius: 6px;
+    border: none;
+    background-color: rgb(71, 165, 241);
+    color:white;
+}
